feat(authHeros): improve get all auth heros
